# dnsforwarder

./: .gitignore  README.md  StatisticTemplate.html  addresschunk.c  addresschunk.h  addresslist.c  addresslist.h  array.c  array.h  bst.c  bst.h  cacheht.c  cachettlcrtl.c  cachettlcrtl.h  checkip.c  checkip.h  common.h  config.h.in  configure  configure.ac  debug.c  debug.h  default.config  default.en.config  dnscache.c  dnscache.h  dnsforwarder  dnsgenerator.c  dnsgenerator.h  dnsparser.c  dnsparser.h  dnsrelated.c  dnsrelated.h  domainstatistic.c  domainstatistic.h  downloader.c  downloader.h  dynamichosts.c  dynamichosts.h  excludedlist.c  (+78 more)
codeblocks/: dnsforwarder.cbp
codeblocks_win/: dnsforwarder.cbp
mac_bin/: dnsforwarder
test/bst/: bst.cbp  main.c
test/mcontext/: main.c  mcontext.cbp
test/ptimer/: main.c  ptimer.cbp
test/stablebuffer/: main.c
test/stringlist/: main.c
test/timedtask/: main.c  timedtask.cbp
vc/: dnsforwarder.sln  dnsforwarder.vcxproj  dnsforwarder.vcxproj.filters
